--- a/bitdash/commercial-add-assets.html
+++ b/bitdash/commercial-add-assets.html
@@ -85,22 +85,22 @@
 function normalizeTicker(t){ return String(t||'').trim().toUpperCase(); }
 
 function classifyB3(ticker){
-  // FIIs e ETFs (na prática muitos ETFs terminam em 11)
-  if (/^[A-Z]{4}11$/.test(ticker)) {
+  // Fundos listados (FII/FIAGRO/alguns fundos de índice) costumam terminar em 11
+  if (/^[A-Z0-9]{4,10}11$/.test(ticker)) {
     const etfKnown = new Set(['BOVA11','SMAL11','IVVB11','DIVO11','XFIX11','GOVE11','SPXI11','XBOV11','FIND11']);
     if (etfKnown.has(ticker)) return 'ETF';
-    return 'FII';
+    return 'FUNDO';
   }
 
   // Ações (ex: PETR4, WEGE3)
   if (/^[A-Z]{4}(3|4|5|6)$/.test(ticker)) return 'AÇÃO';
 
   // BDRs (ex: AAPL34, MSFT34)
-  if (/^[A-Z]{4}\d{2}$/.test(ticker)) return 'BDR';
+  if (/^[A-Z]{4,6}\d{2}$/.test(ticker)) return 'BDR';
 
   // Derivativos (padrões simplificados para opções/futuros)
-  if (/^[A-Z]{4}[A-X]\d{1,2}$/.test(ticker)) return 'DERIVATIVO'; // opções
-  if (/^(WDO|WIN|DOL|IND)[A-Z0-9]{1,6}$/.test(ticker)) return 'DERIVATIVO'; // mini/cheio futuros
+  if (/^[A-Z]{4}[A-X]\d{1,2}$/.test(ticker)) return 'DERIVATIVO';
+  if (/^(WDO|WIN|DOL|IND)[A-Z0-9]{1,6}$/.test(ticker)) return 'DERIVATIVO';
 
   return null;
 }
@@ -130,8 +130,8 @@ function validateAsset(item){
 let approvedItems = [];
 
 function mapTypeToDashboardClass(type){
-  // dashboard atual trabalha melhor com AÇÃO/FII; ETF/BDR/DERIVATIVO entram como AÇÃO para fluxo atual
-  if (type === 'FII') return 'FII';
+  // dashboard atual trabalha melhor com AÇÃO/FII
+  if (type === 'FUNDO' || type === 'FII' || type === 'ETF') return 'FII';
   return 'AÇÃO';
 }
 
