--- a/bitdash/index.html
+++ b/bitdash/index.html
@@ -57,7 +57,7 @@
 <body>
   <div class="topbar">
     <div>
-      <h1>Bitdash - Buy it Dashboard <span class="muted" style="font-size:.8rem">build 2026-02-17-stable5</span></h1>
+      <h1>Bitdash - Buy it Dashboard <span class="muted" style="font-size:.8rem">build 2026-02-17-stable6</span></h1>
       <div class="muted">Visualize, entenda, decida!</div>
     </div>
     <div class="actions">
@@ -423,7 +423,10 @@ const usdRef = {BTC:98000, ETH:3200, SOL:180, XRP:0.6, BNB:650, ADA:0.8, DOGE:0.
 const metricRef = {
   MXRF11: 1.04, HGLG11: 0.95, PETR4: 1.18, WEGE3: 8.4,
   HGBS11: 0.97, KNRI11: 0.93, BBAS3: 1.12, VALE3: 1.45,
-  VISC11: 0.89, XPLG11: 0.86
+  VISC11: 0.89, XPLG11: 0.86,
+  ITUB4: 1.32, ABEV3: 2.55, EGIE3: 2.10, VBBR3: 1.38,
+  KLBN11: 1.22, KNIP11: 0.98, XPML11: 0.92, BTLG11: 0.95,
+  KNCR11: 1.01, HGRU11: 0.97, IRDM11: 0.89
 };
 
 
